<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_configuracion">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/hnt_txtMail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edt_NroLicencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtcontrasenia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edtContraseña"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_Guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuario" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edtUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtcontrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBaseDeDatos" />

    <EditText
        android:id="@+id/edtBaseDeDatos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edtbasededatos"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreEmpresa2" />

    <EditText
        android:id="@+id/edtNombreEmpresa"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_Hin_NombreEmpresa"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtNombreEmpresa2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtNombreEmpresa2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="63dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtBaseDeDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_NroLicencia" />

    <EditText
        android:id="@+id/edt_NroLicencia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edt_hintNroDeLicencia"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtNombreEmpresa2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btn_Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/btn_Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtcontrasenia" />

</android.support.constraint.ConstraintLayout>